# automatyzacja-procesow

./: Projekt_SA.docx  README.md
czesci/: kolo.SLDPRT  korpus.SLDPRT  wahadlo.SLDASM  ~$korpus.SLDPRT
symulacja/: CMakeCache.txt  CMakeLists.txt  main.cpp  main.hpp
symulacja/model/: WOLFIE.urdf  WOLFIE.xml  wahadlo.xml
symulacja/model/wolfie-stl-meshes/: LB_tibia.STL  RB_tibia.STL  RF_tibia.STL  TORSO.STL
symulacja/mujoco210/: THIRD_PARTY_NOTICES
symulacja/mujoco210/model/: WOLFIE.txt  WOLFIE.xml
